It's now at the point where this works sometimes but not others.